feat: add search bar to wiki/docs

--- a/frontend/lib/public/locales/en.json
+++ b/frontend/lib/public/locales/en.json
@@ -811,5 +811,14 @@
       "customizeRdpFile": "RDP file properties",
       "externalAddress": "External terminal server address"
     }
+  },
+  "docs": {
+    "search": {
+      "title": "Search results for \"{{query}}\"",
+      "placeholder": "Search documentation",
+      "typeToSearch": "Type to search",
+      "noResults": "No results found",
+      "searching": "Searching..."
+    }
   }
 }
