fix: defer guacd installation to the identity that runs RAWeb
Installing during the setup script isntalls the guacd wsl distribution for the user who ran the script. This is usually different that the identity for the application (usuaully IIS AppPool\raweb). If we install it on-demand, it is installed by the application identity instead. WSL distibutions are per-user/identity.

--- a/frontend/lib/public/locales/en.json
+++ b/frontend/lib/public/locales/en.json
@@ -852,6 +852,7 @@
     "reconnecting": "Reconnecting to {{hostId}}",
     "serviceOffline": "The remote desktop proxy service is offline.",
     "startingService": "Starting remote desktop proxy service",
+    "installingService": "Installing remote desktop proxy service",
     "hostNotFoundError": "The specified remote host ({{hostId}}) could not be reached."
   }
 }
